--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <head>
         <title>blog</title>
         <link type="text/css" href="style/style.css" rel="stylesheet"/>
+        
+        <script src="https://cdn.firebase.com/js/client/2.4.0/firebase.js"></script>
     </head>
     
     <body id="pagenum">
