--- a/indextest2.html
+++ b/indextest2.html
@@ -5,7 +5,7 @@
         <title>blog</title>
         
         <script src="https://cdn.firebase.com/js/client/2.4.0/firebase.js"></script>
-        <link id="pagestyle" type="text/css" href="css/white-paper.css" rel="stylesheet"/>
+        <link id="pagestyle" type="text/css" href="css/eye-burn.css" rel="stylesheet"/>
         
          <!--<script src="//cdn.tinymce.com/4/tinymce.min.js"></script>
           <script>tinymce.init({ selector:'textarea' });</script>-->
